updating bc of vs code issues

--- a/models/llama_gen.ipynb
+++ b/models/llama_gen.ipynb
@@ -68,8 +68,8 @@
     "    # generate individual response; assuming system prompt is staying the same\n",
     "    prompt_formatted = LLAMA2_PROMPT.format(system_prompt,user_prompt)\n",
     "    input_ids = tokenizer(prompt_formatted, padding=True, return_tensors=\"pt\")\n",
-    "    input_ids['input_ids'] = input_ids['input_ids'].cuda()#.cuda()\n",
-    "    input_ids['attention_mask'] = input_ids['attention_mask'].cuda()#.cuda()\n",
+    "    input_ids['input_ids'] = input_ids['input_ids'].cuda()#.cpu()\n",
+    "    input_ids['attention_mask'] = input_ids['attention_mask'].cuda()#.cpu()\n",
     "    num_input_tokens = input_ids['input_ids'].shape[1]\n",
     "    outputs = model.generate(input_ids['input_ids'], attention_mask=input_ids['attention_mask'].half(),\n",
     "                                max_new_tokens=64, do_sample=True, pad_token_id=tokenizer.pad_token_id)\n",
