--- a/ft_llm/ft.ipynb
+++ b/ft_llm/ft.ipynb
@@ -213,6 +213,17 @@
     "notebook_login() # need to use write-access token this time\n",
     "lora_model.push_to_hub(\"aegunal/llama7b_ft_ipd\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for inference, can load the model:\n",
+    "from peft import AutoPeftModelForCausalLM\n",
+    "loaded_model = AutoPeftModelForCausalLM.from_pretrained(\"aegunal/llama7b_ft_ipd\")"
+   ]
   }
  ],
  "metadata": {
