updating code for finetuning llama models

--- a/ft_llm/ft.ipynb
+++ b/ft_llm/ft.ipynb
@@ -13,42 +13,48 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/gunala/miniconda3/envs/DialGenEnv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from transformers import LlamaTokenizer, LlamaForCausalLM, BitsAndBytesConfig\n",
     "import os\n",
-    "os.environ['CUDA_VISIBLE_DEVICES'] = \"2,3\""
+    "os.environ['CUDA_VISIBLE_DEVICES'] = \"1,2,3\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from huggingface_hub import notebook_login\n",
-    "notebook_login()"
+    "import os\n",
+    "os.environ['HF_TOKEN'] = \"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ceb6051c39044c7aa032fc858d201304",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/3 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import torch\n",
     "from transformers import LlamaTokenizer, LlamaForCausalLM, BitsAndBytesConfig\n",
     "\n",
-    "model_id = \"meta-llama/Llama-2-13b-hf\"\n",
+    "model_id = \"meta-llama/Llama-2-13b-chat-hf\"\n",
     "bnb_config = BitsAndBytesConfig(\n",
     "    load_in_4bit=True,\n",
     "    bnb_4bit_use_double_quant=True,\n",
@@ -57,7 +63,10 @@
     ")\n",
     "\n",
     "tokenizer = LlamaTokenizer.from_pretrained(model_id)\n",
-    "model = LlamaForCausalLM.from_pretrained(model_id, quantization_config=bnb_config, device_map={\"\":0})\n",
+    "model = LlamaForCausalLM.from_pretrained(model_id, \n",
+    "                                         quantization_config=bnb_config,\n",
+    "                                         #load_in_4bit=True,\n",
+    "                                         device_map=\"auto\")\n",
     "\n",
     "tokenizer.pad_token = tokenizer.eos_token\n",
     "model.config.pad_token_id = model.config.eos_token_id"
@@ -65,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,17 +86,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "model.layers.0.self_attn.q_proj.lora_A.default.weight torch.Size([16, 4096])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# check lora trainable layers\n",
     "for name, param in model.named_parameters():\n",
@@ -111,9 +112,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "trainable params: 26214400 || all params: 6698193920 || trainable%: 0.391365199531279\n"
+     ]
+    }
+   ],
    "source": [
     "from peft import LoraConfig, get_peft_model, TaskType\n",
     "\n",
@@ -130,33 +139,73 @@
     "lora_model = get_peft_model(model, lora_config)\n",
     "print_trainable_parameters(model)\n",
     "\n",
-    "import torch\n",
-    "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
-    "lora_model.to(device)"
+    "# import torch\n",
+    "# device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
+    "# lora_model.to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "760930039d504c429d4904c1926b9d77",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/24716 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "fname = \"human_dat_reformatted.json\"\n",
+    "fname = \"/home/gunala/LLMDialGen/human_data/human_dat_reformatted.json\"\n",
     "# data processing\n",
     "import json\n",
     "with open(fname,'r') as inf:\n",
     "    human_dat = json.load(inf)\n",
     "\n",
-    "# now will want to reformat each game into NL\n",
+    "def format_history(text,play):\n",
+    "  input = f\"\"\"\n",
+    "      <<SYS>>\n",
+    "      Imagine that you and your criminal partner have been placed under arrest and are being interrogated in separate rooms. Both you and your partner have the option to either 'Silence' or 'Confess'. If both of you are silent, you both receive a prison sentence of 1 year. If one of you confesses and the other stays silent, the partner that confesses will receive a prison sentence of 0 years while the one of the stayed silent will receive a sentence of 5 years. If both of you confess, you will both receive sentences of 3 years. You and your partner will be interrogated for 20 rounds total, and your goal is to minimize overall prison sentence across all rounds. Respond in one word, either 'Silence' or 'Confess'.\\n\n",
+    "      <</SYS>>\n",
+    "      [INST]\n",
+    "      User:{text}\n",
+    "      [/INST]\\n\n",
+    "\n",
+    "      Assistant:{play}\n",
+    "  \"\"\"\n",
+    "  return input\n",
+    "\n",
+    "# now will want to reformat each game into llama2-chat friendly format\n",
     "train_texts = {'texts':[]}\n",
+    "ind = 0\n",
     "for game_id in human_dat.keys():\n",
     "    round_ids = sorted([int(x) for x in human_dat[game_id].keys()],reverse=True)\n",
     "    game_history = \"\"\n",
-    "    for round_id in range(len(round_ids)):\n",
+    "    for round_id in range(len(round_ids) - 1):\n",
     "        game_history += \"Round \" + str(round_id) + \": \" + \\\n",
     "                        \"Player 1 played \" + human_dat[game_id][str(round_id)]['p1'] + \\\n",
     "                        \", Player 2 played \" + human_dat[game_id][str(round_id)]['p2'] + \". \"\n",
-    "    train_texts['texts'].append(game_history)\n",
+    "    user_prompt = \"You are Player 1, and this is the history of actions so far: \" + game_history + \". Will you choose 'Silence' or 'Confess' in the next round? Please answer in 1 word.\"\n",
+    "    play = human_dat[game_id][str(round_id)]['p1']\n",
+    "    input = format_history(user_prompt,play)\n",
+    "    train_texts['texts'].append(input)\n",
+    "\n",
+    "    user_prompt = \"You are Player 2, and this is the history of actions so far: \" + game_history + \". Will you choose 'Silence' or 'Confess' in the next round? Please answer in 1 word.\"\n",
+    "    play = human_dat[game_id][str(round_id)]['p2']\n",
+    "    input = format_history(user_prompt,play)\n",
+    "    train_texts['texts'].append(input)\n",
+    "\n",
+    "    if ind == 5000:\n",
+    "        break\n",
     "\n",
     "from datasets import Dataset\n",
     "data = Dataset.from_dict(train_texts)\n",
@@ -166,23 +215,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Detected kernel version 5.4.0, which is below the recommended minimum of 5.5.0; this can cause the process to hang. It is recommended to upgrade the kernel to the minimum version or higher.\n"
+     ]
+    }
+   ],
    "source": [
     "from transformers import Trainer, TrainingArguments, DataCollatorForLanguageModeling\n",
     "\n",
     "training_args = TrainingArguments(\n",
     "      per_device_train_batch_size=1,\n",
-    "      gradient_accumulation_steps=4,\n",
+    "     # gradient_accumulation_steps=4,\n",
     "      evaluation_strategy='epoch',\n",
     "      num_train_epochs=1,\n",
-    "      warmup_steps=2,\n",
-    "      max_steps=10,\n",
+    "     # warmup_steps=2,\n",
+    "      max_steps=1,\n",
     "      learning_rate=2e-4,\n",
-    "      fp16=True,\n",
+    "     # fp16=True,\n",
     "      logging_steps=1,\n",
-    "      output_dir=\"outputs\",\n",
+    "      output_dir=\"outputs_train_13bchat\",\n",
     "      optim=\"paged_adamw_8bit\"\n",
     ")\n",
     "\n",
@@ -197,21 +254,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='1' max='1' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [1/1 21:42, Epoch 0/1]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Epoch</th>\n",
+       "      <th>Training Loss</th>\n",
+       "      <th>Validation Loss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0.208800</td>\n",
+       "      <td>0.152779</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TrainOutput(global_step=1, training_loss=0.2087707370519638, metrics={'train_runtime': 1304.2957, 'train_samples_per_second': 0.001, 'train_steps_per_second': 0.001, 'total_flos': 29362384281600.0, 'train_loss': 0.2087707370519638, 'epoch': 0.0})"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "trainer.train()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3dbde3208bc64184bb8e3b1322bec2de",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "adapter_model.safetensors:   0%|          | 0.00/105M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CommitInfo(commit_url='https://huggingface.co/aegunal/llama13bchat_ft_ipd/commit/af5e08a0e9a161f6e472729947dd1cc0e7cb0183', commit_message='Upload model', commit_description='', oid='af5e08a0e9a161f6e472729947dd1cc0e7cb0183', pr_url=None, pr_revision=None, pr_num=None)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "notebook_login() # need to use write-access token this time\n",
-    "lora_model.push_to_hub(\"aegunal/llama7b_ft_ipd\")"
+    "os.environ['HF_TOKEN'] = \"\" # need to use write-access token this time\n",
+    "lora_model.push_to_hub(\"aegunal/llama13bchat_ft_ipd\")"
    ]
   },
   {
@@ -242,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
