ft llms updates

--- a/ft_llm/ft_flex.ipynb
+++ b/ft_llm/ft_flex.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['HF_TOKEN'] = \"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\"\n",
+    "os.environ['HF_TOKEN'] = \"\"\n",
     "os.environ['CUDA_VISIBLE_DEVICES'] = \"2,3\"\n",
     "import torch\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')"
@@ -20,7 +20,7 @@
    "outputs": [],
    "source": [
     "# which model to ft\n",
-    "model_id = \"meta-llama/Llama-2-7b-hf\" # \"meta-llama/Llama-2-7b-hf\"\n",
+    "model_id = \"google/gemma-7b\" # \"meta-llama/Llama-2-7b-hf\"\n",
     "                                      # \"meta-llama/Llama-2-13b-hf\"\n",
     "                                      # \"openai-community/gpt2\"\n",
     "                                      # \"mistralai/Mistral-7B-v0.1\"\n",
@@ -45,12 +45,173 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d430b0b079446b99ce194be38a2b612",
+       "model_id": "19be42dcf173414880a238c7fa7e906d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+       "tokenizer.model:   0%|          | 0.00/4.24M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "41ad8ac0f1f74bf196a8e5a12ca7da0d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer.json:   0%|          | 0.00/17.5M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "255211af6c8d49aea7d663712e3a8ce8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "special_tokens_map.json:   0%|          | 0.00/555 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4b31fe597b234829bf254317322cdd5d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json:   0%|          | 0.00/629 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "`low_cpu_mem_usage` was None, now set to True since model is quantized.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9bcac6a840e3464eb2e3e2e52e8df287",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors.index.json:   0%|          | 0.00/20.9k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8251fca110424dbc9f91c0d9202f332b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading shards:   0%|          | 0/4 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8750b4384d3e4e0e925ede15b9dbda2b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model-00001-of-00004.safetensors:   0%|          | 0.00/5.00G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1f91a97202ea4212a83f5f604390fade",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model-00002-of-00004.safetensors:   0%|          | 0.00/4.98G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bb9d129746b64995b0f676dd0344c607",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model-00003-of-00004.safetensors:   0%|          | 0.00/4.98G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6e4f9a48e6c340468bb108731931bb17",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model-00004-of-00004.safetensors:   0%|          | 0.00/2.11G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "68e4a889070a482180b47b993a3f6243",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/4 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "209ba8a3dbeb409da67e3bd80a111bfa",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "generation_config.json:   0%|          | 0.00/137 [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -97,9 +258,12 @@
     "    else:\n",
     "        model = AutoModelForSequenceClassification.from_pretrained(model_id,\n",
     "                                                    quantization_config=bnb_config)\n",
+    "    tokenizer.pad_token = tokenizer.eos_token\n",
+    "    model.config.pad_token_id = model.config.eos_token_id\n",
     "elif model_id == \"openai-community/gpt2\":\n",
     "    from transformers import GPT2Tokenizer, GPT2Model, GPT2ForSequenceClassification\n",
     "    tokenizer = GPT2Tokenizer.from_pretrained('gpt2')\n",
+    "    tokenizer.pad_token = tokenizer.eos_token\n",
     "    if model_type == \"causal\":\n",
     "        model = GPT2Model.from_pretrained('gpt2')\n",
     "    else:\n",
@@ -115,13 +279,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# check lora trainable layers\n",
+    "def check_lora_trainable_layers():\n",
+    "    for name, param in model.named_parameters():\n",
+    "        if param.requires_grad:\n",
+    "            print(name, param.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from peft import prepare_model_for_kbit_training, LoraConfig, get_peft_model, TaskType\n",
     "model.gradient_checkpointing_enable()\n",
     "model = prepare_model_for_kbit_training(model)\n",
     "\n",
+    "target_modules = []\n",
+    "if (model_id == \"meta-llama/Llama-2-7b-hf\") or \\\n",
+    "   (model_id == \"google/gemma-7b\"):\n",
+    "    target_modules = [\"q_proj\", \"k_proj\", \"v_proj\", \"o_proj\"]\n",
+    "elif model_id == \"mistralai/Mistral-7B-v0.1\":\n",
+    "    target_modules = [\"q_proj\", \"k_proj\", \"v_proj\", \"o_proj\", \"down_proj\", \"up_proj\", \"gate_proj\"]\n",
+    "elif model_id == \"tiiuae/falcon-7b\":\n",
+    "    target_modules = [\"query_key_value\", \"dense\", \"dense_h_to_4h\", \"dense_4h_to_h\"]\n",
+    "\n",
     "lora_config = LoraConfig(\n",
     "    task_type=TaskType.CAUSAL_LM,\n",
-    "    target_modules=[\"q_proj\", \"k_proj\", \"q_proj\", \"v_proj\", \"o_proj\"],\n",
+    "    target_modules=target_modules,\n",
     "    r=16,\n",
     "    lora_alpha=16,\n",
     "    lora_dropout=0.05,\n",
@@ -134,13 +320,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "237899fd935a4e08837602e70720e263",
+       "model_id": "91e5599723354bcc9910307f598e8338",
        "version_major": 2,
        "version_minor": 0
       },
@@ -174,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -193,13 +379,14 @@
     "\n",
     "training_args = TrainingArguments(\n",
     "      per_device_train_batch_size=1,\n",
-    "     # gradient_accumulation_steps=4,\n",
+    "      per_device_eval_batch_size=1,\n",
+    "      gradient_accumulation_steps=4, # this is for optimization\n",
     "      evaluation_strategy='epoch',\n",
-    "      num_train_epochs=.2, # testing\n",
-    "     # warmup_steps=2,\n",
-    "      max_steps=1,\n",
+    "      num_train_epochs=1,\n",
+    "      warmup_steps=2,\n",
+    "     # max_steps=1, # overrides num_train_epochs\n",
     "      learning_rate=2e-4,\n",
-    "     # fp16=True,\n",
+    "      fp16=True, # this is for optimization\n",
     "      logging_steps=1,\n",
     "      output_dir=output_dirname,\n",
     "      optim=\"paged_adamw_8bit\"\n",
@@ -219,14 +406,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "`use_cache=True` is incompatible with gradient checkpointing. Setting `use_cache=False`...\n",
+      "`use_cache=True` is incompatible with gradient checkpointing. Setting `use_cache=False`.\n",
+      "`use_cache=True` is incompatible with gradient checkpointing. Setting `use_cache=False`.\n",
       "/home/gunala/miniconda3/envs/QLORAFTEnv/lib/python3.11/site-packages/torch/utils/checkpoint.py:460: UserWarning: torch.utils.checkpoint: please pass in use_reentrant=True or use_reentrant=False explicitly. The default value of use_reentrant will be updated to be False in the future. To maintain current behavior, pass use_reentrant=True. It is recommended that you use use_reentrant=False. Refer to docs for more details on the differences between the two variants.\n",
       "  warnings.warn(\n",
       "/home/gunala/miniconda3/envs/QLORAFTEnv/lib/python3.11/site-packages/torch/nn/parallel/_functions.py:68: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
@@ -239,8 +427,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='2' max='1' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [2/1 : < :, Epoch 0.00/1]\n",
+       "      <progress value='69' max='1235' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [  69/1235 12:01 < 3:29:08, 0.09 it/s, Epoch 0.06/1]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -252,13 +440,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "  </tbody>\n",
-       "</table><p>\n",
-       "    <div>\n",
-       "      \n",
-       "      <progress value='141' max='155' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [141/155 06:50 < 00:41, 0.34 it/s]\n",
-       "    </div>\n",
-       "    "
+       "</table><p>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -276,11 +458,45 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a8148a9c188d4047a6ff55e86e5b5b36",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "adapter_model.safetensors:   0%|          | 0.00/54.6M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CommitInfo(commit_url='https://huggingface.co/aegunal/FT_IPD_mistral7b/commit/1f7ccb98187df75fb7f796ca57c01b2a097fc079', commit_message='Upload model', commit_description='', oid='1f7ccb98187df75fb7f796ca57c01b2a097fc079', pr_url=None, pr_revision=None, pr_num=None)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "os.environ['HF_TOKEN'] = \"\" # write token\n",
-    "hub_path = \"aegunal/FT_IPD_\" + model_id\n",
-    "lora_model.push_to_hub(\"aegunal/llama13bchat_ft_ipd\")"
+    "hub_path = \"aegunal/FT_IPD_gemma7b\" #+ #model_id\n",
+    "lora_model.push_to_hub(hub_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.save_model(\"saved_models/FT_IPD_mistr\")"
    ]
   }
  ],
